--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
        
         <i class="fa fa-whatsapp"></i>
     </a>
-    <header class="navegação">
-        <div class="navegação__logo">
-            <img class="navegação__logo-imagem" src="./assets/whatsapp-computer.png" width="50px" alt="Logo whatsapp">
+    <header class="navegaco">
+        <div class="navegacao__logo">
+            <img class="navegacao__logo-imagem" src="./assets/whatsapp-computer.png" width="50px" alt="Logo whatsapp">
             
         </div>
-        <nav class="navegação__menu">
-            <ul class="navegação__menu-lista">
-                <li class="navegação__menu-item"><a class="navegação__menu-link" href="index.html">Bem Vindos</a></li>
-                <li class="navegação__menu-item"><a class="navegação__menu-link" href="about.html">Sobre Nós</a></li>
-                <li class="navegação__menu-item"><a class="navegação__menu-link" href="partners.html">Parcerias</a></li>
-                <li class="navegação__menu-item"><a class="navegação__menu-link" href="events.html">Eventos</a></li>
-                <li class="navegação__menu-item"><a class="navegação__menu-link" href="whocmacis.html">Quem Somos</a></li>
-                <li class="navegação__menu-item"><a class="navegação__menu-link" href="contact.html">Contato</a></li>
+        <nav class="navegacao__menu">
+            <ul class="navegacao__menu-lista">
+                <li class="navegacao__menu-item"><a class="navegacao__menu-link" href="index.html">Bem Vindos</a></li>
+                <li class="navegacao__menu-item"><a class="navegacao__menu-link" href="about.html">Sobre Nós</a></li>
+                <li class="navegacao__menu-item"><a class="navegacao__menu-link" href="partners.html">Parcerias</a></li>
+                <li class="navegacao__menu-item"><a class="navegacao__menu-link" href="events.html">Eventos</a></li>
+                <li class="navegacao__menu-item"><a class="navegacao__menu-link" href="whocmacis.html">Quem Somos</a></li>
+                <li class="navegacao__menu-item"><a class="navegacao__menu-link" href="contact.html">Contato</a></li>
             </ul>
         </nav>
     </header>
